# Zbar_basic_android

./: CMakeLists.txt  README.md  build.sh
